# FusionCoreEnIP

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: VL53L1X_api.c.D1A324CFE61E83A7.idx  VL53L1X_api.h.1458EF96D9534F82.idx  VL53L1X_calibration.c.DEE32685E21A1B1A.idx  VL53L1X_calibration.h.F16B74C2E4F9BA58.idx  acd.c.0732E47D3C86A38E.idx  acd.h.70CDC922F900D5E5.idx  acd.h.F5F8412331AB7F5F.idx  acd_manager.c.EFBF41CAA4B60FB3.idx  acd_manager.h.633D20E99DD0EBE4.idx  altcp.h.C76CD6EC2C0229FD.idx  api.h.57702D06DF28B0C1.idx  api_lib.c.613E1FD629ACEAB3.idx  api_msg.c.7D0AEAFE1DC98F7C.idx  api_msg.h.E77E353E8EBE014B.idx  appcontype.c.1934A8D5196668CB.idx  appcontype.h.343B72BD47D1583F.idx  arc4.c.CFC320E2B376306C.idx  arch.h.26F2300E96162117.idx  auth.c.99DCADED05677960.idx  autoip.c.23E846316D35DC86.idx  autoip.h.0A840FF0A88F1FFA.idx  (+380 more)
components/abz_encoder/: CMakeLists.txt  README.md  abz_encoder.c
components/abz_encoder/include/: abz_encoder.h
components/abz_encoder_manager/: CMakeLists.txt  INTEGRATION.md  README.md  abz_encoder_manager.c
components/abz_encoder_manager/include/: abz_encoder_manager.h
components/acd_manager/: CMakeLists.txt  acd_manager.c
components/clearpath_servo/: CMakeLists.txt  README.md  clearpath_servo.c
components/clearpath_servo/include/: clearpath_servo.h
components/clearpath_servo_manager/: CMakeLists.txt  README.md  clearpath_servo_manager.c
components/clearpath_servo_manager/include/: clearpath_servo_manager.h
components/esp_netif/: esp_netif_handlers.c
components/gp8403_dac/: CMakeLists.txt  INTEGRATION.md  README.md  gp8403_dac.c
components/gp8403_dac/include/: gp8403_dac.h
components/gp8403_dac_manager/: CMakeLists.txt  gp8403_dac_manager.c
components/gp8403_dac_manager/include/: gp8403_dac_manager.h
components/i2c_bus_manager/: CMakeLists.txt  i2c_bus_manager.c
components/lldp/: CMakeLists.txt  README.md
components/lldp/include/: ciplldpdatatable.h  ciplldpdatatable_instance.h  ciplldpmanagement.h  lldp.h  lldp_frame_builder.h  lldp_neighbor_db.h  lldp_raw_socket.h  lldp_reception.h  lldp_tlv_decoder.h  lldp_transmission.h
components/lldp/include/esp32/: nvlldpmanagement.h
components/lldp/src/: ciplldpdatatable.c  ciplldpdatatable_instance.c  ciplldpmanagement.c  lldp_component.c  lldp_neighbor_db.c  lldp_reception.c  lldp_transmission.c
components/lldp/src/esp32/: lldp_frame_builder.c  lldp_raw_socket.c  lldp_tlv_decoder.c  nvlldpmanagement.c
components/log_buffer/: CMakeLists.txt  log_buffer.c
components/lsm6ds3/: ASSEMBLY_DATA.md  README.md  lsm6ds3.c
components/lsm6ds3_manager/: CMakeLists.txt  lsm6ds3_manager.c
components/max7219/: CMakeLists.txt  README.md  max7219.c
components/mcp23008/: CMakeLists.txt  README.md  mcp23008.c  mcp23008_init.c
components/mcp23017/: CMakeLists.txt  README.md  mcp23017.c  mcp23017_init.c
components/mcp230xx_manager/: CMakeLists.txt  mcp230xx_manager.c
components/mcp230xx_manager/include/: mcp230xx_manager.h
components/modbus_tcp/: CMakeLists.txt
components/nau7802/: CMakeLists.txt  COMPONENT_CHECKLIST.md  Doxyfile.in  LICENSE  README.md  idf_component.yml  nau7802.c  nau7802_calibration_storage.c
components/nau7802_manager/: CMakeLists.txt  nau7802_manager.c
components/nau7802_manager/include/: nau7802_manager.h
components/opener/: CMakeLists.txt  README.md  idf_component.yml
components/opener/src/: opener_api.h
components/opener/src/cip/: CMakeLists.txt  appcontype.c  cipassembly.c  cipcommon.c  cipcommon.h  cipconnectionmanager.c  cipethernetlink.c  cipethernetlink.h  cipidentity.c  cipidentity.h  cipioconnection.c  cipmessagerouter.c  cipparameter.c  cipparameter.h  cipport.c  cipport.h  cipqos.c  ciptcpipinterface.c  ciptcpipinterface.h  ciptypes.h
components/opener/src/cip_objects/OpENerFileObject/: cipfile.c  create_icon_gz.py  embed_eds.py  embed_icon_gz.py  extract_icon.py  memfile.c  memfile.h
components/opener/src/cip_objects/OpENerFileObject/data/: FusionCoreEnIP.eds
components/opener/src/enet_encap/: cpf.c  encap.c  endianconv.c
components/opener/src/ports/: CMakeLists.txt  generic_networkhandler.c
components/opener/src/ports/ESP32/: CMakeLists.txt  devicedata.h  eth_media_counters.c  eth_media_counters.h  opener.c
components/opener/src/ports/ESP32/fusion_core/: fusioncore.c  opener_user_conf.h
components/opener/src/ports/ESP32/fusion_core/include/: fusion_core_assembly.h
components/opener/src/ports/nvdata/: nvdata.c  nvqos.c  nvtcpip.c
components/ota_manager/: CMakeLists.txt
components/pcf8575/: CMakeLists.txt  README.md  pcf8575.c
components/system_config/: CMakeLists.txt  i2c_config.c  mcp_config.c  system_config.c
components/terabee_mini_evo/: CMakeLists.txt  terabee_mini_evo.c
components/terabee_mini_evo_manager/: CMakeLists.txt  terabee_mini_evo_manager.c
components/terabee_mini_evo_manager/include/: terabee_mini_evo_manager.h
components/vl53l1x_config/: CMakeLists.txt  vl53l1x_config.c
components/vl53l1x_manager/: CMakeLists.txt  vl53l1x_manager.c
components/vl53l1x_manager/include/: vl53l1x_manager.h
components/vl53l1x_uld/: CMakeLists.txt  README.md  example.c
components/webui/: CMakeLists.txt  README.md
components/webui/include/: webui.h  webui_api.h
components/webui/src/: webui.c  webui_api.c  webui_html.c
docs/: ACD_CONFLICT_REPORTING.md  API_Endpoints.md  ARC_MOVE_ASSEMBLY_INTEGRATION.md  ASSEMBLY_DATA_LAYOUT.md  CLEARLINK_COMPARISON_AND_IMPROVEMENTS.md  EMAC_STATISTICS_LIMITATION.md  FILE_OBJECT_INTEGRATION.md  LSM6DS3_ANGLE_CALCULATION.md  LWIP_MODIFICATIONS.md  NAU7802_API_ENHANCEMENTS.md  OPENER_FILE_OBJECT_INTEGRATION.md  PARAMETER_OBJECT_MAP.md
docs/EIPExplorerTree/: FusionCore.csv
docs/enip-stack-detector/: ClearLinkStack.txt
eds/: FusionCoreEnIP.eds  FusionCoreEnIP.eds.ebf
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: clean_all_cache.bat  clean_all_cache.ps1  copy_firmware.py  create_multi_layer_icon.py
tools/: test_media_counters.py
(+37 files in other folders)
