idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        opener
        lwip
        esp_netif
        esp_event
        esp_eth
        driver
        freertos
        nvs_flash
        webui
        system_config
        ota_manager
        log_buffer
        nau7802
        lsm6ds3
        vl53l1x_uld
        i2c_bus_manager
        vl53l1x_manager
        lsm6ds3_manager
        nau7802_manager
        gp8403_dac_manager
        gp8403_dac
        mcp230xx_manager
        acd_manager
)
